--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -105,13 +105,15 @@ img{
  	
 #footer {
 	
-	position: fixed;
+	position: relative;
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	height:15%;
 	background-color:#C0D9D9;
-	padding-top: 1%;
+	padding-top: 10%;
+	padding-bottom: 0%;
+	margin-top: 50px;
+	
 	
 
  }
@@ -151,6 +153,15 @@ hr{
 	border: solid 2px white;
 }
 
-.contentHome{
-	padding-top:120px;
+/*.contentHome{
+	padding-top:120px;padding-top:120px;
+}*/
+#back{
+	height: 50px;
+	width: 50px;
+	margin-left: 15px;
+	float: left;
+
+	
+	
 }
