--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -103,7 +103,7 @@ img{
 
  }
  	
-#footer {
+#footerAdmin {
 	
 	position: relative;
 	left: 0;
@@ -113,6 +113,19 @@ img{
 	padding-top: 10%;
 	padding-bottom: 0%;
 	margin-top: 50px;
+	
+	
+
+ }
+ #footer {
+	
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height:15%;
+	background-color:#C0D9D9;
+	padding-top: 1%;
 	
 	
 
