--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -116,6 +116,20 @@ img{
 	
 	
 
+}
+.footerAdmin {
+	
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	background-color:#C0D9D9;
+	padding-top: 10%;
+	padding-bottom: 0%;
+	margin-top: 50px;
+	
+	
+
  }
  #footer {
 	
